feat: add 2 new datasets

--- a/as733l.html
+++ b/as733l.html
@@ -136,7 +136,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
           <br />
           <br />
 
-          <h1 align="center">Dataset:Autonomous systems AS-733</h1>
+          <h1 align="center">Dataset:Autonomous systems AS-733 (Large)</h1>
 
           <div class="mainBody" align="center">
             <p style="padding-left: 1rem; padding-top: 5px">
@@ -149,7 +149,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
             <p class="algoText">
               The
               <a href="https://snap.stanford.edu/data/as-733.html"
-                >Autonomous systems AS-733</a
+                >Autonomous systems AS-733 (Large)</a
               >
               dataset consists of BGP logs of a communication network of AS
               exchanging traffic flows with its neighbours. The nodes are
@@ -222,7 +222,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               Densest Subgraphs
             </h2>
             <p class="algoText">
-              For 3-cliques (h = 3), the densest subgraph in AS 733 has an
+              For 3-cliques (h = 3), the densest subgraph in AS-733 has an
               h-clique density of 35.9091, with 33 vertices and 1185 cliques.
               For 4-cliques (h = 4), the densest subgraph has an h-clique
               density of 85.125, with 32 vertices and 2724 cliques. For
