--- a/caida.html
+++ b/caida.html
@@ -220,7 +220,7 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
               Densest Subgraphs
             </h2>
             <p class="algoText">
-              For 3-cliques (h = 3), the densest subgraph in ca-HepTh has an
+              For 3-cliques (h = 3), the densest subgraph in CAIDA AS has an
               h-clique density of 114.847, with 72 vertices and 8269 cliques.
               For 4-cliques (h = 4), the densest subgraph has an h-clique
               density of 405.333, with 60 vertices and 24320 cliques. For
