--- a/exact.html
+++ b/exact.html
@@ -222,10 +222,14 @@ The following 3 algorithms were implemented to enumerate the maximal cliques in 
           </h2>
           <p class="algoText" align="center">
             The algorithm was run on an M1 MacBook Air with 16GB RAM and using the
-            -O3 optimization flag during compilation. The algorithm was run on the
-            CAIDA AS dataset, Autonomous Systems AS-733 dataset, High Energy Physics (ca-HepTh) dataset, and the Netscience dataset, for <b>h = 3, h = 4, and h = 5</b>. The CAIDA AS network took 
-            <b>(2125.04 seconds, 7795.12 seconds)</b>, 
-            the Autonomous Systems AS-733 took <b>(13.40 seconds, 18.19 seconds, 32.65 seconds)</b>, the
+            -O3 optimization flag during compilation. The algorithm was run on the Yeast dataset, the
+            CAIDA AS dataset, Autonomous Systems AS-733 small dataset, the Autonomous Systems AS-733 large dataset, High Energy Physics (ca-HepTh) dataset, and the Netscience dataset, for <b>h = 3, h = 4, and h = 5</b>. 
+            The Yeast network took 
+            <b>(0.18 seconds, 0.03 seconds, 0.01 seconds)</b>,
+            the CAIDA AS network took 
+            <b>(2125.04 seconds, 7795.12 seconds)</b>, the Autonomous Systems
+             AS-733 small took <b>(0.87 seconds, 1.91 seconds, 4.73 seconds)</b>
+            the Autonomous Systems AS-733 large took <b>(13.40 seconds, 18.19 seconds, 32.65 seconds)</b>, the
             High Energy Physics (ca-HepTh) network took <b>(33.30 seconds, 64.88 seconds, 744.83 seconds)</b>, and the Netscience dataset took <b>(0.45 seconds, 1.32 seconds, 3.45 seconds)</b> to run the algorithm. The runtimes given as for (h = 3 (3-clique), h = 4
             (4-clique), h = 5 (5-clique)) respectively.
             Due to the large size of the graph, the CAIDA AS dataset takes several hours to run for h = 5. Hence we were unable to report the runtime for it. 
@@ -582,12 +586,12 @@ int main(int argc, char* argv[]) {
 
 <script>
   // Common data
-  const datasets = ["AS-733", "ca-HepTh", "Netscience", "CAIDA AS"];
+  const datasets = ["Yeast", "AS-733 small", "AS-733 large", "ca-HepTh", "Netscience", "CAIDA AS"];
 
   // Different runtimes for each h
-  const runtimes_h3 = [13.40, 33.30, 0.45, 2125.04];
-  const runtimes_h4 = [18.19, 64.88, 1.32, 7795.12];
-  const runtimes_h5 = [32.65, 744.83, 3.45];
+  const runtimes_h3 = [0.18, 0.87, 13.40, 33.30, 0.45, 2125.04];
+  const runtimes_h4 = [0.03, 1.91, 18.19, 64.88, 1.32, 7795.12];
+  const runtimes_h5 = [0.01, 4.73, 32.65, 744.83, 3.45];
 
   function createPlot(divId, runtimes) {
     const data = [
